; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_http2-download.c_setup.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_http2-download.c_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transfer = type { i64, i32* }

@.str = private unnamed_addr constant [6 x i8] c"dl-%d\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@CURLOPT_WRITEDATA = common dso_local global i32 0, align 4
@CURLOPT_URL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"https://localhost:8443/index.html\00", align 1
@CURLOPT_VERBOSE = common dso_local global i32 0, align 4
@CURLOPT_DEBUGFUNCTION = common dso_local global i32 0, align 4
@my_trace = common dso_local global i64 0, align 8
@CURLOPT_DEBUGDATA = common dso_local global i32 0, align 4
@CURLOPT_HTTP_VERSION = common dso_local global i32 0, align 4
@CURL_HTTP_VERSION_2_0 = common dso_local global i64 0, align 8
@CURLOPT_SSL_VERIFYPEER = common dso_local global i32 0, align 4
@CURLOPT_SSL_VERIFYHOST = common dso_local global i32 0, align 4
@CURLOPT_PIPEWAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.transfer*, i32)* @setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup(%struct.transfer* %0, i32 %1) #0 {
  %3 = alloca %struct.transfer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [128 x i8], align 16
  %6 = alloca i32*, align 8
  store %struct.transfer* %0, %struct.transfer** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32* (...) @curl_easy_init()
  %8 = load %struct.transfer*, %struct.transfer** %3, align 8
  %9 = getelementptr inbounds %struct.transfer, %struct.transfer* %8, i32 0, i32 1
  store i32* %7, i32** %9, align 8
  store i32* %7, i32** %6, align 8
  %10 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @snprintf(i8* %10, i32 128, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %14 = call i64 @fopen(i8* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %15 = load %struct.transfer*, %struct.transfer** %3, align 8
  %16 = getelementptr inbounds %struct.transfer, %struct.transfer* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* @CURLOPT_WRITEDATA, align 4
  %19 = load %struct.transfer*, %struct.transfer** %3, align 8
  %20 = getelementptr inbounds %struct.transfer, %struct.transfer* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %17, i32 %18, i64 %21)
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @CURLOPT_URL, align 4
  %25 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %23, i32 %24, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* @CURLOPT_VERBOSE, align 4
  %28 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %26, i32 %27, i64 1)
  %29 = load i32*, i32** %6, align 8
  %30 = load i32, i32* @CURLOPT_DEBUGFUNCTION, align 4
  %31 = load i64, i64* @my_trace, align 8
  %32 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %29, i32 %30, i64 %31)
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* @CURLOPT_DEBUGDATA, align 4
  %35 = load %struct.transfer*, %struct.transfer** %3, align 8
  %36 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %33, i32 %34, %struct.transfer* %35)
  %37 = load i32*, i32** %6, align 8
  %38 = load i32, i32* @CURLOPT_HTTP_VERSION, align 4
  %39 = load i64, i64* @CURL_HTTP_VERSION_2_0, align 8
  %40 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %37, i32 %38, i64 %39)
  %41 = load i32*, i32** %6, align 8
  %42 = load i32, i32* @CURLOPT_SSL_VERIFYPEER, align 4
  %43 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %41, i32 %42, i64 0)
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* @CURLOPT_SSL_VERIFYHOST, align 4
  %46 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %44, i32 %45, i64 0)
  ret void
}

declare dso_local i32* @curl_easy_init(...) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i64 @fopen(i8*, i8*) #1

declare dso_local i32 @curl_easy_setopt(i32*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
